--- a/jsconfig.json
+++ b/jsconfig.json
@@ -10,5 +10,6 @@
     "allowSyntheticDefaultImports": true,
     "forceConsistentCasingInFileNames": true,
     "skipLibCheck": true
-  }
+  },
+  "include": ["src/**/*", "test/**/*"]
 }
