fix fetch error

--- a/package.json
+++ b/package.json
@@ -31,7 +31,11 @@
     "test:types": "tsc",
     "prepublishOnly": "npm test && npm run build"
   },
+  "peerDependencies": {
+    "@sinclair/typebox": "^0.30.4"
+  },
   "dependencies": {
+    "@apidevtools/json-schema-ref-parser": "^10.1.0",
     "@apidevtools/swagger-parser": "^10.1.0",
     "@sindresorhus/safe-stringify": "^1.0.0",
     "code-block-writer": "^12.0.0",
