--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -14,6 +14,6 @@ jobs:
       with:
         node-version: '18.x'
     - name: Install dependencies
-      run: npm ci
+      run: npm install
     - name: Run tests
       run: npm test
