--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "build": "tsup src/client.js src/writer.js --dts",
     "test": "node --test",
     "posttest": "npm run lint",
-    "lint": "standard",
+    "lint": "eslint",
     "test:types": "tsc",
     "prepublishOnly": "npm test && npm run build"
   },
@@ -46,6 +46,8 @@
     "@sinclair/typebox": "^0.30.4",
     "@types/node": "^20.6.2",
     "eslint": "^8.46.0",
+    "eslint-plugin-jsdoc": "^46.8.1",
+    "expect-type": "^0.16.0",
     "fastify": "^4.21.0",
     "openapi-types": "^12.1.3",
     "qs": "^6.11.2",
