--- a/package.json
+++ b/package.json
@@ -43,32 +43,32 @@
   "scripts": {
     "start": "node index.js",
     "build": "tsup src/client.js src/writer.js --dts --format esm,cjs",
-    "test": "node --test",
-    "posttest": "npm run lint",
+    "test": "node --test --experimental-test-snapshots",
+    "test:update": "node --run test -- --test-update-snapshots",
+    "posttest": "node --run lint",
     "lint": "eslint .",
     "test:types": "tsc",
-    "prepublishOnly": "npm test && npm run build"
+    "prepublishOnly": "node --run test && node --run build"
   },
   "peerDependencies": {
     "@sinclair/typebox": ">=0.26"
   },
   "dependencies": {
     "@apidevtools/swagger-parser": "^10.1.0",
-    "@sindresorhus/safe-stringify": "^1.0.0",
-    "code-block-writer": "^12.0.0",
+    "@sindresorhus/safe-stringify": "^1.1.0",
+    "code-block-writer": "^13.0.1",
     "fast-querystring": "^1.1.2",
-    "meow": "^12.1.1",
-    "ora": "^7.0.1",
-    "prettier": "^3.0.1",
-    "undici": "^5.24.0"
+    "meow": "^13.2.0",
+    "ora": "^8.0.1",
+    "prettier": "^3.3.3",
+    "undici": "^6.19.4"
   },
   "devDependencies": {
     "@fastify/swagger": "^8.8.0",
     "@sinclair/typebox": "^0.31.17",
-    "@types/node": "^20.6.2",
-    "eslint": "^8.46.0",
+    "@types/node": "^20.14.12",
+    "eslint": "^9.7.0",
     "eslint-config-standard-ext": "^0.0.27",
-    "eslint-plugin-jsdoc": "^46.8.1",
     "expect-type": "^0.16.0",
     "fastify": "^4.21.0",
     "openapi-types": "^12.1.3",
