--- a/package.json
+++ b/package.json
@@ -51,37 +51,29 @@
     "prepublishOnly": "node --run test && node --run build"
   },
   "peerDependencies": {
-    "@sinclair/typebox": ">=0.26"
+    "@sinclair/typebox": ">=0.32.35"
   },
   "dependencies": {
-    "@apidevtools/swagger-parser": "^10.1.0",
-    "@sindresorhus/safe-stringify": "^1.1.0",
+    "@apidevtools/json-schema-ref-parser": "^11.6.4",
     "code-block-writer": "^13.0.1",
     "fast-querystring": "^1.1.2",
     "meow": "^13.2.0",
     "ora": "^8.0.1",
+    "pascalcase": "^2.0.0",
     "prettier": "^3.3.3",
     "undici": "^6.19.4"
   },
   "devDependencies": {
-    "@fastify/swagger": "^8.8.0",
-    "@sinclair/typebox": "^0.31.17",
+    "@fastify/swagger": "^8.15.0",
+    "@sinclair/typebox": "^0.32.35",
     "@types/node": "^20.14.12",
     "eslint": "^9.7.0",
-    "eslint-config-standard-ext": "^0.0.27",
+    "eslint-config-standard-ext": "^1.0.4",
     "expect-type": "^0.16.0",
     "fastify": "^4.21.0",
-    "openapi-types": "^12.1.3",
     "qs": "^6.11.2",
-    "standard": "^17.1.0",
-    "tsup": "^8.0.2",
-    "typescript": "^5.2.2"
-  },
-  "standard": {
-    "env": [
-      "node",
-      "browser"
-    ]
+    "tsup": "^8.2.3",
+    "typescript": "^5.5.4"
   },
   "publishConfig": {
     "access": "public"
