--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,6 +3,7 @@
     "target": "ES2022",
     "module": "NodeNext",
     "moduleResolution": "NodeNext",
+    "types": ["./test/env.d.ts"],
     "allowJs": true,
     "checkJs": true,
     "noEmit": true,
